Stored js libs in libs folder

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			</div>
     </div>
 
-    <script src="js/TweenLite.min.js"></script>
-    <script src="js/EasePack.min.js"></script>
+    <script src="js/libs/TweenLite.min.js"></script>
+    <script src="js/libs/EasePack.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/time.js"></script>
   </body>
